Fix mobile layout

--- a/css/main.css
+++ b/css/main.css
@@ -96,9 +96,8 @@ a, a:visited {
   font-weight: bold;
   margin-right: 15px;
   border-radius: 9px;
-  line-height: 38px;
   font-size: 24px;
-  padding: 0 15px;
+  padding: 8px 15px;
   margin-bottom: 15px;
   background-color: #F5B63F;
   transition: 0.25s;
@@ -111,13 +110,14 @@ a, a:visited {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 38px;
+  flex-wrap: wrap;
   border: 3px solid #F5B63F;
   color: #F5B63F;
   margin-bottom: 15px;
   border-radius: 9px;
   font-size: 20px;
   flex-grow: 1;
+  padding: 8px 5px;
 }
 .subtitle .right strong, 
 .subtitle .right a {
