--- a/css/main.css
+++ b/css/main.css
@@ -122,6 +122,7 @@ a, a:visited {
 .subtitle .right strong, 
 .subtitle .right a {
   margin: 0 10px;
+  line-height: 24px;
 } 
 .subtitle .right a,
 .subtitle .right a:visited {
