--- a/css/main.css
+++ b/css/main.css
@@ -9,156 +9,159 @@
   font-weight: bold;
 }
 
+@font-face {
+  font-family: 'OpenSans';
+  src: url('../fonts/OpenSans-Regular.woff2');
+}
+
+@font-face {
+  font-family: 'OpenSans';
+  src: url('../fonts/OpenSans-Bold.woff2');
+  font-weight: bold;
+}
+
+
 html {
   overflow: hidden;
 }
 body {
   margin: 0;
 }
-a, a:visited {
+a,
+a:visited {
+  color: #F5B63F;
   text-decoration: none;
-  color: #dedede;
 }
+h1 {
+  font-family: 'JosefinSans';
+  font-weight: bold;
+  font-size: 32px;
+}
+
 .wrapper {
-  background-color: black;
+  display: flex;
+}
+
+.content {
+  height: 100vh;
+  flex-grow: 1;
+  font-family: 'OpenSans';
+  font-size: 14px;
+  overflow-y: scroll;
+}
+.content-wrapper {
+  margin: 50px;
+}
+.content-ul {
+  margin: 0;
+  padding: 0;
+  padding-left: 36px;
+}
+.content-ul li {
+  margin: 0;
+  padding: 0 0 8px 0;
+}
+.content-dates {
+  font-size: 16px;
+  font-weight: normal;
+  display: flex;
+  align-items: center;
+}
+.content-calendar {
+  width: 60px;
+  margin-right: 20px;
+}
+.content-text {
+  margin: 20px 0 40px 0;
   display: flex;
   flex-direction: column;
+}
+.content .btn,
+.content .btn:visited {
+  display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: baseline;
+  background-color: #F5B63F;
+  color: #222;
+  text-decoration: none;
+  border-radius: 9px;
+  padding: 15px 15px;
+  font-size: 20px;
+  font-family: 'JosefinSans';
+  font-weight: bold;
+}
+.content-arrow {
+  height: 14px;
+  margin-left: 10px;
+}
+
+.aside {
+  background-color: #222;
   height: 100vh;
+  min-width: 325px;
   color: #dedede;
   font-family: 'JosefinSans';
+  box-shadow: 0 0 6px #222;
 }
 
-.nav {
-  width: 100%;
+.aside-wrapper {
+  height: calc(100% - 60px);
+  margin: 30px 40px;
   display: flex;
-  align-items: center;
-  justify-content: flex-end;
-}
-.nav a {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  font-size: 30px;
-  margin-right: 30px;
-  margin-top: 30px;
-}
-.nav div,
-.nav path {
-  transition: 0.25s;
-}
-.nav a:hover div,
-.nav a:hover path {
-  color: #F5B63F;
-  fill: #F5B63F;
-}
-.nav .blog-icon {
-  width: 30px;
-  margin-right: 10px;
-}
-
-.main {
-  display: flex;
-  max-width: 620px;
-  margin: 0 20px;
-  flex-grow: 1;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-between;
+  position: relative;
 }
-.title {
-  display: flex;
-  align-items: flex-start;
-}
-.logo {
-  width: 67%;
-}
-.year {
-  width: 33%;
-  margin-left: 20px;
-}
-.message {
-  margin: 24px 0;
-  font-size: 19px;
-}
-
-.subtitle {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.subtitle .left,
-.subtitle .left:visited {
-  display: flex;
-  align-items: center;
-  color: #222;
+.aside-list {
+  list-style-type: none;
+  padding: 0;
+  font-size: 16px;
   font-weight: bold;
-  margin-right: 15px;
-  border-radius: 9px;
-  font-size: 24px;
-  padding: 8px 15px;
-  margin-bottom: 15px;
-  background-color: #F5B63F;
-  transition: 0.25s;
-}
-.subtitle .left:hover {
-  color: #dedede;
 }
 
-.subtitle .right {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  border: 3px solid #F5B63F;
+.aside-year {
+  position: absolute;
+  left: -5px;
+  top: 100px;
+  width: 110px;
+  margin-left: 200px;
+  margin-top: -50px;
+}
+.aside-message {
+  margin: 24px 0;
+  font-size: 22px;
+  max-width: 200px;
+}
+.aside-hashtag {
   color: #F5B63F;
-  margin-bottom: 15px;
-  border-radius: 9px;
-  font-size: 20px;
-  flex-grow: 1;
-  padding: 8px 5px;
-}
-.subtitle .right strong, 
-.subtitle .right a {
-  margin: 0 10px;
-  line-height: 24px;
-} 
-.subtitle .right a,
-.subtitle .right a:visited {
-  color: #F5B63F;
-  border-bottom: 1px solid #F5B63F;
-  transition: 0.25s;
-}
-.subtitle .right a:hover {
-  color: #dedede;
-  border-bottom: 1px solid #dedede;
+  font-family: 'OpenSans';
+  font-weight: bold;
 }
 
-.title .logo-yellow,
-.title .logo-blue-1,
-.title .logo-blue-2,
-.title .logo-blue-3,
-.title .logo-red-1,
-.title .logo-red-2 {
+.aside .logo-yellow,
+.aside .logo-blue-1,
+.aside .logo-blue-2,
+.aside .logo-blue-3,
+.aside .logo-red-1,
+.aside .logo-red-2 {
   transition: 0.25s;
 }
 
-.title:hover .logo-yellow {
+.aside:hover .logo-yellow {
   fill: #fc0;
 }
-.title:hover .logo-blue-1 {
+.aside:hover .logo-blue-1 {
   fill: #96b9ff;
 }
-.title:hover .logo-blue-2 {
+.aside:hover .logo-blue-2 {
   fill: #69f;
 }
-.title:hover .logo-blue-3 {
+.aside:hover .logo-blue-3 {
   fill: #36c;
 }
-.title:hover .logo-red-1 {
+.aside:hover .logo-red-1 {
   fill: #ff3b3b;
 }
-.title:hover .logo-red-2 {
+.aside:hover .logo-red-2 {
   fill: #fd0000;
 }
