Use grid layout in order to make the web responsive

--- a/css/main.css
+++ b/css/main.css
@@ -2,30 +2,27 @@
   font-family: 'JosefinSans';
   src: url('../fonts/JosefinSans-Regular.woff2');
 }
-
 @font-face {
   font-family: 'JosefinSans';
   src: url('../fonts/JosefinSans-Bold.woff2');
   font-weight: bold;
 }
-
 @font-face {
   font-family: 'OpenSans';
   src: url('../fonts/OpenSans-Regular.woff2');
 }
-
 @font-face {
   font-family: 'OpenSans';
   src: url('../fonts/OpenSans-Bold.woff2');
   font-weight: bold;
 }
 
+/* HTML Tags */
 
-html {
-  overflow: hidden;
-}
 body {
   margin: 0;
+  font-family: 'OpenSans';
+  font-size: 14px;
 }
 a,
 a:visited {
@@ -38,46 +35,55 @@ h1 {
   font-size: 32px;
 }
 
+/* Layout */
+
 .wrapper {
   display: flex;
+  flex-direction: column;
+}
+.main-wrapper {
+  margin: 60px 25px;
+}
+.aside {
+  background-color: #222;
+  color: #dedede;
+  font-family: 'JosefinSans';
+  box-shadow: 0 0 6px #222;
+}
+.aside-wrapper {
+  display: flex;
+  flex-direction: column;
+  margin: 25px;
 }
 
-.content {
-  height: 100vh;
-  flex-grow: 1;
-  font-family: 'OpenSans';
-  font-size: 14px;
-  overflow-y: scroll;
-}
-.content-wrapper {
-  margin: 50px;
-}
-.content-ul {
+/* Elements */
+
+.main-ul {
   margin: 0;
   padding: 0;
   padding-left: 36px;
 }
-.content-ul li {
+.main-ul li {
   margin: 0;
   padding: 0 0 8px 0;
 }
-.content-dates {
+.main-dates {
   font-size: 16px;
   font-weight: normal;
   display: flex;
   align-items: center;
 }
-.content-calendar {
+.main-calendar {
   width: 60px;
   margin-right: 20px;
 }
-.content-text {
+.main-text {
   margin: 20px 0 40px 0;
   display: flex;
   flex-direction: column;
 }
-.content .btn,
-.content .btn:visited {
+.main .btn,
+.main .btn:visited {
   background-color: #F5B63F;
   color: #222;
   text-decoration: none;
@@ -87,27 +93,9 @@ h1 {
   font-family: 'JosefinSans';
   font-weight: bold;
 }
-.content-arrow {
+.main-arrow {
   height: 14px;
   margin-left: 10px;
-}
-
-.aside {
-  background-color: #222;
-  height: 100vh;
-  min-width: 325px;
-  color: #dedede;
-  font-family: 'JosefinSans';
-  box-shadow: 0 0 6px #222;
-}
-
-.aside-wrapper {
-  height: calc(100% - 60px);
-  margin: 30px 40px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  position: relative;
 }
 .aside-list {
   list-style-type: none;
@@ -115,14 +103,11 @@ h1 {
   font-size: 16px;
   font-weight: bold;
 }
-
 .aside-year {
   position: absolute;
-  left: -5px;
-  top: 100px;
+  left: 215px;
+  top: 75px;
   width: 110px;
-  margin-left: 200px;
-  margin-top: -50px;
 }
 .aside-message {
   margin: 24px 0;
@@ -135,6 +120,52 @@ h1 {
   font-weight: bold;
 }
 
+@media (min-width: 768px) {
+
+  /* Layout */
+  
+  .wrapper {
+    overflow: hidden;
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 325px 1fr;
+    grid-template-rows: 50% 50%;
+  }
+  .aside-top {
+    grid-column: 1;
+    grid-row: 1;
+  }
+  .aside-bottom {
+    grid-column: 1;
+    grid-row: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+  } 
+  .main {
+    grid-column: 2;
+    grid-row: 1;
+    height: 100vh;
+    overflow-y: scroll;
+  }
+  .main-wrapper {
+    margin: 60px;
+  }
+  .aside-wrapper {
+    position: relative;
+    margin: 30px 40px;
+  }
+
+  /* Elements */
+
+  .aside-year {
+    left: 195px;
+    top: 50px;
+  }
+}
+
+/* Logo transition */
+
 .aside .logo-yellow,
 .aside .logo-blue-1,
 .aside .logo-blue-2,
@@ -143,7 +174,6 @@ h1 {
 .aside .logo-red-2 {
   transition: 0.25s;
 }
-
 .aside:hover .logo-yellow {
   fill: #fc0;
 }
