--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,9 @@ h1 {
   font-weight: bold;
   font-size: 32px;
 }
+p {
+  margin: 6px 0;
+}
 
 /* Layout */
 
@@ -110,7 +113,7 @@ h1 {
   width: 110px;
 }
 .aside-message {
-  margin: 24px 0;
+  margin: 24px 0 12px 0;
   font-size: 22px;
   max-width: 200px;
 }
