--- a/css/main.css
+++ b/css/main.css
@@ -41,12 +41,6 @@ p {
   margin: 6px 0;
 }
 
-/* Helpers */
-
-.half-width {
-  width: 50%;
-}
-
 /* Layout */
 
 .wrapper {
@@ -61,11 +55,16 @@ p {
 }
 .main-intro-pictures {
   display: flex;
-  flex-wrap: wrap
+  flex-flow: row wrap;
+  align-items: center;
+}
+.main-intro-pictures img {
+  width: 50%;
+  height: auto;
 }
 .main-intro-logo {
   position: absolute;
-  top:0;
+  top: 0;
   left: 0;
   width: 100%;
   height: 100%
