--- a/css/main.css
+++ b/css/main.css
@@ -41,6 +41,51 @@ p {
   margin: 6px 0;
 }
 
+table {
+  margin: 20px 0;
+  width: 100%;
+  border-collapse: collapse;
+}
+
+th, td {
+  padding: 6px 12px;
+}
+tbody tr th:first-child,
+tbody tr td:first-child {
+  font-size: 12px;
+  width: 40%;
+}
+tbody tr th:nth-child(2),
+tbody tr td:nth-child(2) {
+  font-weight: bold;
+  font-size: 16px;
+  text-align: center;
+  width: 20%;
+  background-color: rgba(229, 228, 226, 0.5);
+}
+tbody tr th:nth-child(3),
+tbody tr td:nth-child(3) {
+  font-weight: bold;
+  font-size: 16px;
+  text-align: center;
+  width: 20%;
+  background-color: rgba(255, 215, 0, 0.5);
+}
+tbody tr th:nth-child(4),
+tbody tr td:nth-child(4) {
+  font-weight: bold;
+  font-size: 16px;
+  text-align: center;
+  width: 20%;
+  background-color: rgba(192, 192, 192, 0.5);
+}
+tbody tr:nth-child(odd) {
+  background-color: rgba(200,200,200,0.25);
+}
+tbody tr:nth-child(even) {
+  background-color: rgba(240,240,240,0.25);
+}
+
 /* Layout */
 
 .wrapper {
@@ -49,6 +94,11 @@ p {
 }
 .main-wrapper {
   margin: 60px 25px;
+}
+.main-wrapper a,
+.main-wrapper a:visited {
+  text-decoration: underline;
+  color: rgb(177, 120, 15);
 }
 .main-intro {
   position: relative;
@@ -75,7 +125,7 @@ p {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: rgba(255,255,255,0.15);
+  background-color: rgba(255,255,255,0.1);
 }
 .main-intro-logo div img {
   border-radius: 50%;
@@ -97,7 +147,7 @@ p {
 .alert {
   background-color: #F5B63F;
   color: #222;
-  padding: 10px 20px;
+  padding: 12px 24px;
   font-weight: bold;
 }
 .alert a {
