--- a/css/main.css
+++ b/css/main.css
@@ -86,6 +86,21 @@ tbody tr:nth-child(even) {
   background-color: rgba(240,240,240,0.25);
 }
 
+.list-founders {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0;
+}
+.list-founders li {
+  margin: 0;
+  padding: 0;
+  margin-left: 20px;
+}
+.list-founders li:first-child {
+  list-style-type: none;
+  margin-left: 0;
+}
+
 /* Layout */
 
 .wrapper {
@@ -228,7 +243,7 @@ tbody tr:nth-child(even) {
     height: 100vh;
     display: grid;
     grid-template-columns: 325px 1fr;
-    grid-template-rows: 50% 50%;
+    grid-template-rows: 65% 35%;
   }
   .aside-top {
     grid-column: 1;
