--- a/css/main.css
+++ b/css/main.css
@@ -8,12 +8,12 @@
   font-weight: bold;
 }
 @font-face {
-  font-family: 'OpenSans';
-  src: url('../fonts/OpenSans-Regular.woff2');
+  font-family: 'NunitoSans';
+  src: url('../fonts/NunitoSans-Regular.woff2');
 }
 @font-face {
-  font-family: 'OpenSans';
-  src: url('../fonts/OpenSans-Bold.woff2');
+  font-family: 'NunitoSans';
+  src: url('../fonts/NunitoSans-Bold.woff2');
   font-weight: bold;
 }
 
@@ -21,8 +21,8 @@
 
 body {
   margin: 0;
-  font-family: 'OpenSans';
-  font-size: 14px;
+  font-family: 'NunitoSans';
+  font-size: 16px;
 }
 a,
 a:visited {
@@ -94,7 +94,7 @@ tbody tr:nth-child(even) {
 .list-founders li {
   margin: 0;
   padding: 0;
-  margin-left: 20px;
+  margin-left: 24px;
 }
 .list-founders li:first-child {
   list-style-type: none;
@@ -230,7 +230,7 @@ tbody tr:nth-child(even) {
 }
 .aside-hashtag {
   color: #F5B63F;
-  font-family: 'OpenSans';
+  font-family: 'NunitoSans';
   font-weight: bold;
 }
 
