Add first three speakers

--- a/css/main.css
+++ b/css/main.css
@@ -205,7 +205,6 @@ tbody tr:nth-child(even) {
   background-color: #F5B63F;
   color: #222;
   text-decoration: none;
-  border-radius: 9px;
   padding: 15px 25px;
   font-size: 20px;
   font-family: 'JosefinSans', Arial, Helvetica, sans-serif;
@@ -237,6 +236,61 @@ tbody tr:nth-child(even) {
   font-family: 'NunitoSans', Arial, Helvetica, sans-serif;
   font-weight: bold;
 }
+
+/* Speakers */
+
+.speakers {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.speaker {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+  width: 100%;
+}
+.speaker-wrapper {
+  display: flex;
+  position: relative;
+  width: 100%;
+  max-width: 360px;
+}
+.speaker-desc {
+  display: flex;
+  flex-direction: column;
+  background-color: #222;
+  color: #dedede;
+  width: 50px;
+  padding: 5px;
+}
+.speaker-desc a {
+  display: flex;
+}
+.speaker-name {
+  font-family: 'JosefinSans', Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  padding: 10px 16px;
+  font-size: 20px;
+  color: #222;
+  background-color: #F5B63F;
+}
+
+@media (min-width: 900px) {
+  .speaker {
+    width: 49%;
+  }
+}
+
+@media (min-width: 1200px) {
+  .speaker {
+    width: 31.5%;
+  }
+}
+
 
 @media (min-width: 768px) {
 
