--- a/css/main.css
+++ b/css/main.css
@@ -304,6 +304,7 @@ tbody tr:nth-child(even) {
 }
 .sponsor-platinum {
   width: 320px;
+  max-width: 100%;
   height: 160px;
   border: 1px solid #dedede;
   display: flex;
@@ -311,10 +312,11 @@ tbody tr:nth-child(even) {
   justify-content: center;
 }
 .sponsor-platinum img {
-  width: 280px;
+  width: 80%;
 }
 .sponsor-gold {
   width: 240px;
+  max-width: 100%;
   height: 120px;
   border: 1px solid #dedede;
   display: flex;
@@ -322,10 +324,11 @@ tbody tr:nth-child(even) {
   justify-content: center;
 }
 .sponsor-gold img {
-  width: 180px;
+  width: 75%;
 }
 .sponsor-silver {
   width: 200px;
+  max-width: 100%;
   height: 100px;
   border: 1px solid #dedede;
   display: flex;
@@ -334,10 +337,11 @@ tbody tr:nth-child(even) {
   margin: 10px 20px 10px 0;
 }
 .sponsor-silver img {
-  width: 150px;
+  width: 80%;
 }
 .sponsor-inkind {
   width: 160px;
+  max-width: 100%;
   height: 80px;
   border: 1px solid #dedede;
   display: flex;
@@ -345,7 +349,7 @@ tbody tr:nth-child(even) {
   justify-content: center;
 }
 .sponsor-inkind img {
-  width: 120px;
+  width: 80%;
 }
 
 
