--- a/css/main.css
+++ b/css/main.css
@@ -44,8 +44,15 @@ h1 {
 h2 {
   font-size: 1.2em;
 }
+h3 {
+  padding: 0;
+  margin: 0;
+}
 p {
   margin: 6px 0;
+}
+.smaller-p {
+  font-size: 14px;
 }
 
 table {
@@ -93,6 +100,10 @@ tbody tr:nth-child(even) {
   background-color: rgba(240,240,240,0.25);
 }
 
+.overflow-x {
+  overflow-x: auto;
+}
+
 .list-founders {
   display: flex;
   flex-wrap: wrap;
@@ -101,7 +112,7 @@ tbody tr:nth-child(even) {
 .list-founders li {
   margin: 0;
   padding: 0;
-  margin-left: 24px;
+  margin-left: 22px;
 }
 .list-founders li:first-child {
   list-style-type: none;
@@ -114,11 +125,11 @@ tbody tr:nth-child(even) {
   display: flex;
   flex-direction: column;
 }
-.main-wrapper {
+.section {
   margin: 60px 25px;
 }
-.main-wrapper a,
-.main-wrapper a:visited {
+.section a,
+.section a:visited {
   text-decoration: underline;
   color: rgb(177, 120, 15);
 }
@@ -205,13 +216,17 @@ tbody tr:nth-child(even) {
 }
 .main .btn,
 .main .btn:visited {
+  text-decoration: none;
   background-color: #F5B63F;
   color: #222;
   text-decoration: none;
-  padding: 15px 25px;
+  padding: 10px 16px;
   font-size: 20px;
-  font-family: 'JosefinSans', Arial, Helvetica, sans-serif;
   font-weight: bold;
+}
+.main .btn.disabled {
+  opacity: 0.75;
+  cursor: not-allowed;
 }
 .main-arrow {
   height: 14px;
@@ -296,6 +311,56 @@ tbody tr:nth-child(even) {
   }
 }
 
+/* Tickets */
+
+.ticket-row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.ticket-wrapper {
+  display: flex;
+  width: 100%;
+  border: 1px solid #ccc;
+  margin: 12px 0;
+}
+.ticket {
+  margin: 20px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.ticket-title {
+  display: flex;
+}
+.ticket-title img {
+  margin-right: 16px;
+  width: 40px;
+}
+.ticket-footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 15px;
+}
+.ticket-price {
+  font-size: 36px;
+  font-weight: bold;
+}
+
+@media (min-width: 1100px) {
+  .ticket-wrapper {
+    width: 48%;
+  }
+}
+
+@media (min-width: 1330px) {
+  .ticket-wrapper {
+    width: 32%;
+  }
+}
+
 /* Sponsors */
 
 .sponsor-row {
@@ -306,7 +371,7 @@ tbody tr:nth-child(even) {
   width: 320px;
   max-width: 100%;
   height: 160px;
-  border: 1px solid #dedede;
+  border: 1px solid #ccc;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -318,7 +383,7 @@ tbody tr:nth-child(even) {
   width: 240px;
   max-width: 100%;
   height: 120px;
-  border: 1px solid #dedede;
+  border: 1px solid #ccc;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -330,7 +395,7 @@ tbody tr:nth-child(even) {
   width: 200px;
   max-width: 100%;
   height: 100px;
-  border: 1px solid #dedede;
+  border: 1px solid #ccc;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -362,7 +427,7 @@ tbody tr:nth-child(even) {
     height: 100vh;
     display: grid;
     grid-template-columns: 325px 1fr;
-    grid-template-rows: 65% 35%;
+    grid-template-rows: 70% 30%;
   }
   .aside-top {
     grid-column: 1;
@@ -381,7 +446,7 @@ tbody tr:nth-child(even) {
     height: 100vh;
     overflow-y: scroll;
   }
-  .main-wrapper {
+  .section {
     margin: 60px;
   }
   .aside-wrapper {
