--- a/css/main.css
+++ b/css/main.css
@@ -375,6 +375,7 @@ tbody tr:nth-child(even) {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 10px 20px 10px 0;
 }
 .sponsor-platinum img {
   width: 80%;
@@ -387,6 +388,7 @@ tbody tr:nth-child(even) {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 10px 20px 10px 0;
 }
 .sponsor-gold img {
   width: 75%;
@@ -412,6 +414,7 @@ tbody tr:nth-child(even) {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 10px 20px 10px 0;
 }
 .sponsor-inkind img {
   width: 80%;
