--- a/css/main.css
+++ b/css/main.css
@@ -328,6 +328,9 @@ hr {
   border: 1px solid #999;
   margin: 12px 0;
 }
+.ticket-wrapper.active {
+  border: 2px solid #555;
+}
 .ticket {
   margin: 20px;
   width: 100%;
