--- a/css/main.css
+++ b/css/main.css
@@ -376,8 +376,8 @@ hr {
   flex-wrap: wrap;
 }
 .sponsor-platinum {
-  max-width: 320px;
-  width: 100%;
+  width: 320px;
+  max-width: 100%;
   height: 160px;
   border: 1px solid #ccc;
   display: flex;
@@ -389,8 +389,8 @@ hr {
   width: 80%;
 }
 .sponsor-gold {
-  max-width: 240px;
-  width: 100%;
+  width: 240px;
+  max-width: 100%;
   height: 120px;
   border: 1px solid #ccc;
   display: flex;
@@ -402,8 +402,8 @@ hr {
   width: 75%;
 }
 .sponsor-silver {
-  max-width: 200px;
-  width: 100%;
+  width: 200px;
+  max-width: 100%;
   height: 100px;
   border: 1px solid #ccc;
   display: flex;
@@ -415,8 +415,8 @@ hr {
   width: 80%;
 }
 .sponsor-inkind {
-  max-width: 160px;
-  width: 100%;
+  width: 160px;
+  max-width: 100%;
   height: 80px;
   border: 1px solid #dedede;
   display: flex;
