--- a/css/main.css
+++ b/css/main.css
@@ -402,7 +402,7 @@ hr {
 .speaker-title {
   display: flex;
   flex-direction: column;
-  color: #dedede;
+  background-color: #ddd;
   padding: 12px;
   font-size: 12px;
   color: #222;
@@ -550,9 +550,10 @@ hr {
   flex-wrap: wrap;
 }
 .sponsor-platinum {
-  width: 320px;
+  background: white;
+  width: 290px;
   max-width: 100%;
-  height: 160px;
+  height: 130px;
   border: 1px solid #ccc;
   display: flex;
   align-items: center;
@@ -560,12 +561,13 @@ hr {
   margin: 10px 20px 10px 0;
 }
 .sponsor-platinum img {
-  width: 80%;
+  margin: 12%;
 }
 .sponsor-gold {
-  width: 240px;
+  background: white;
+  width: 260px;
   max-width: 100%;
-  height: 120px;
+  height: 110px;
   border: 1px solid #ccc;
   display: flex;
   align-items: center;
@@ -573,12 +575,13 @@ hr {
   margin: 10px 20px 10px 0;
 }
 .sponsor-gold img {
-  width: 75%;
+  margin: 15%;
 }
 .sponsor-silver {
-  width: 200px;
+  background: white;
+  width: 230px;
   max-width: 100%;
-  height: 100px;
+  height: 90px;
   border: 1px solid #ccc;
   display: flex;
   align-items: center;
@@ -586,12 +589,13 @@ hr {
   margin: 10px 20px 10px 0;
 }
 .sponsor-silver img {
-  width: 80%;
+  margin: 15%;
 }
 .sponsor-inkind {
-  width: 160px;
+  background: white;
+  width: 200px;
   max-width: 100%;
-  height: 80px;
+  height: 70px;
   border: 1px solid #dedede;
   display: flex;
   align-items: center;
@@ -599,7 +603,7 @@ hr {
   margin: 10px 20px 10px 0;
 }
 .sponsor-inkind img {
-  width: 80%;
+  margin: 10%;
 }
 
 /* Main list */
