--- a/css/main.css
+++ b/css/main.css
@@ -374,84 +374,39 @@ hr {
   justify-content: space-between;
 }
 .speaker {
-  display: flex;
-  justify-content: center;
   margin-bottom: 40px;
   width: 100%;
   background: #efefef;
 }
-.speaker:hover .speaker-img img {
-  filter: none;
-}
-.speaker-wrapper {
-  display: flex;
-  flex-direction: row;
-  position: relative;
-  width: 100%;
-}
 .speaker-img {
-  flex-basis: 125px;
-  flex-shrink: 0;
-}
-.speaker-img img {
-  filter: grayscale(1);
-  width: 100%;
-  transition: 0.2s;
-  height: 100%;
+  float: left;
+  width: 150px;
+  padding: 0 16px 8px 0;
 }
 .speaker-title {
-  display: flex;
-  flex-direction: column;
-  background-color: #ddd;
-  padding: 12px;
-  font-size: 12px;
-  color: #222;
-  font-weight: bold;
-  flex-grow: 1;
-}
-.speaker-sn a,
-.speaker-sn a:hover {
-  border: none;
-}
-.speaker-sn img {
-  display: flex;
-  width: 24px;
-}
-.speaker-data {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  position: absolute;
-  bottom: 12px;
-  right: 12px;
-  margin-left: 12px;
-}
-.speaker-data > div {
-  display: flex;
-  justify-content: flex-end;
-}
-.speaker-name {
-  font-weight: bold;
-  padding: 8px 12px;
-  font-size: 20px;
-  color: #222;
-  background-color: #F5B63F;
-}
-.speaker-desc {
-  padding: 8px 12px;
-  font-size: 12px;
-  background-color: #222;
+  background: #222;
   color: #dedede;
   font-weight: bold;
-  text-align: right;
+  font-size: 16px;
+  text-transform: uppercase;
+  padding: 10px 16px;
 }
-@media (min-width: 320px) {
-  .speaker-img {
-    flex-basis: 175px;
-    flex-shrink: 0;
-  }
+.speaker-sn {
+  margin-top: 16px;
+  display: flex;
 }
-@media (min-width: 600px) {
+.speaker-sn a {
+  width: 32px;
+  display: flex;
+}
+.speaker-sn a img {
+  width: 100%;
+}
+.speaker-desc {
+  font-size: 13px;
+  padding: 20px;
+}
+@media (min-width: 632px) {
   .speaker {
     width: 48.5%;
   }
@@ -461,7 +416,7 @@ hr {
     width: 100%;
   }
 }
-@media (min-width: 1000px) {
+@media (min-width: 1030px) {
   .speaker {
     width: 48.5%;
   }
