--- a/css/main.css
+++ b/css/main.css
@@ -580,6 +580,9 @@ hr {
 .sponsor-gold .width-60 {
   width: 60%;
 }
+.sponsor-gold .width-75 {
+  width: 75%;
+}
 .sponsor-gold .width-85 {
   width: 85%;
 }
